kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-test
spec:
  selector:
    app: flask-app-test
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
