kubernetes/test/app-test-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-service-test
spec:
  type: NodePort
  selector:
    app: flask-app-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
